src/client/expr/snapshots/datafusion_delta_sharing__client__expr__test__and_op_from_expr.snap
---
source: src/client/expr/mod.rs
expression: parsed_op
snapshot_kind: text
---
{
  "op": "and",
  "children": [
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "hireDate",
          "valueType": "date"
        },
        {
          "op": "literal",
          "value": "2021-04-29",
          "valueType": "date"
        }
      ]
    },
    {
      "op": "lessThan",
      "children": [
        {
          "op": "column",
          "name": "id",
          "valueType": "int"
        },
        {
          "op": "literal",
          "value": "25",
          "valueType": "int"
        }
      ]
    }
  ]
}
