src/client/expr/snapshots/datafusion_delta_sharing__client__expr__test__equal_op_from_expr.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "equal",
  "children": [
    {
      "op": "column",
      "name": "hireDate",
      "valueType": "date"
    },
    {
      "op": "literal",
      "value": "2021-04-29",
      "valueType": "date"
    }
  ]
}
