src/client/expr/snapshots/datafusion_delta_sharing__client__expr__test__flatten_and_ops.snap
---
source: src/client/expr/mod.rs
expression: op
snapshot_kind: text
---
{
  "op": "and",
  "children": [
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "a",
          "valueType": "string"
        },
        {
          "op": "literal",
          "value": "1",
          "valueType": "string"
        }
      ]
    },
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "b",
          "valueType": "string"
        },
        {
          "op": "literal",
          "value": "2",
          "valueType": "string"
        }
      ]
    },
    {
      "op": "equal",
      "children": [
        {
          "op": "column",
          "name": "c",
          "valueType": "string"
        },
        {
          "op": "literal",
          "value": "3",
          "valueType": "string"
        }
      ]
    }
  ]
}
