src/client/expr/snapshots/datafusion_delta_sharing__client__expr__test__not_op_from_expr.snap
---
source: src/client/expr/mod.rs
expression: parsed_op
snapshot_kind: text
---
{
  "op": "not",
  "children": [
    {
      "op": "isNull",
      "children": [
        {
          "op": "column",
          "name": "id",
          "valueType": "int"
        }
      ]
    }
  ]
}
